# TickFlow

./: .env.example  .gitignore
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/dashboard/analytics/: page.tsx
frontend/src/app/dashboard/orderbook/: page.tsx
frontend/src/app/dashboard/risk/: page.tsx
frontend/src/app/dashboard/scanner/: page.tsx
frontend/src/components/: DashboardLayout.tsx  DataCard.tsx  DataTable.tsx  ExchangeStatus.tsx  LatencyGauge.tsx  OrderbookChart.tsx  PnLChart.tsx  PriceTickerBar.tsx  SpreadHeatmap.tsx  StatusBadge.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/lib/: api.ts  currency.tsx  env.ts  scanner-preferences.tsx  types.ts  utils.ts
infra/: docker-compose.dev.yml  docker-compose.yml
infra/config/: nats.conf
services/execution/: .env.example  Dockerfile  executor.py  requirements.txt
services/execution/tests/: test_executor.py
services/gateway/: .env.example  Dockerfile  go.mod  go.sum
services/gateway/cmd/: main.go
services/gateway/internal/handlers/: handlers.go
services/gateway/internal/middleware/: middleware.go
services/gateway/internal/models/: models.go
services/gateway/internal/storage/: mongo.go  storage.go
services/ingestion/: .env.example  Dockerfile  go.mod  go.sum
services/ingestion/cmd/: main.go
services/scanner/: .env.example  Cargo.toml  Dockerfile
services/scanner/src/: engine.rs  main.rs  models.rs
(+2 files in other folders)
